# bot-does-things

./: README.md  pyproject.toml
src/bot_does_things/: __init__.py  assertions.py  config.py  general_tools.py  image_tools.py  local_io.py  logger.py  tool_wrapper.py  tools.py  web_tools.py
src/bot_does_things/tools/: __init__.py  general_tools.py  image_tools.py  llm.py  local_io.py  web_tools.py
src/bot_does_things/tools/pdf_reading/: __init__.py  pdf_reader.py  surya_images.py
src/helpful_tools/: __init__.py  tools.py
