[project]
name = "bot_does_things"
version = "0.1.0"
description = "A collection of helpful tools for agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ddgs>=9.10.0",
    "duckduckgo-search>=8.1.1",
    "html-to-markdown>=2.20.0",
    "langchain>=1.2.2",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.5",
    "pandas>=2.3.3",
    "pillow>=12.1.0",
    "pypdf>=6.5.0",
    "pytesseract>=0.3.13",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bot_does_things"]
